removed VM options for cgroups unsupported by newer JVM